TestSuite/errors/err0146.pas
var i : byte;
const set1 : set of byte = [2,i];
begin
end.